# rust_actix_data_receiver

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci-check.yml  deploy-image.yml
src/: main.rs
