[package]
name = "actix_data_receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-prom = "0.8.0"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
